--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
+  background-color:#E4F9F5;
 }
 .pro{
   text-decoration: underline;
