--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ h1
 h2{color:#66BFBf;
   font-family: 'Montserrat',sans-serif;
   font-weight: normal;
+    text-decoration: underline;
 }
 h3{ color: #11999E;
   font-family: 'Montserrat',sans-serif;
